0.8.0 (currently working on)
- [#2705] Fix: Crash when saving an event in the FE
- [#2583] Fix: seminar::createImageForSingleView needs to initialize $imageFile before use
- [#2496] Change: Add a function for sending an e-mail to an FE user and use it from registration::notifyAttendee
- [#2495] Change: Add a function for sending an e-mail to an organizer and use it from registration::notifyOrganizers
- [#2667] Fix: Test testRenderThrowsExceptionForInvalidEventUid fails
- [#2600] Feature: Add a CLI module
- [#2657] Change: testingFramework::cleanUp should clean up the mapper registry and everything
- [#2627] Feature: Add a parameter $recordData to createAndLoginFrontEndUser
- [#2602] Add a TS setup configuration for whether the registration CSV for an event should be attached to e-mails to the organizers
- [#2629] Cleanup: Remove XCLASS stuff from all classes in tests/ and tests/fixtures/
- [#2597] Feature: Add form for canceling an event to the BE module
- [#2624] Fix: Crash in the EM
- [#2637] Fix: Tables rows in FE registration list not are on the same line
- [#2533] Feature: Add form for confirming an event to the BE module
- [#2620] Fix: seminar::getOrganizers destructs the organizers at the wrong place
- [#2154] Fix: Step counter shows "step 3 of 2" after failed submit attempt on page 2
- [#788] Fix: Use t3lib_div::trimExplode instead of explode
- [#2592] Feature: Show the license expiry in the date single view
- [#1716] Fix: Make the CSV export work with multiline cells in Excel and OpenOffice.org
- [#2579] Fix: The user fields for export should be chosen from fe_user not tx_seminars_attendances
- [#2596] Fix: Use mb_strlen instead of strlen
- [#2503] Feature: Add DB result and DB query exceptions and wrappers for executing queries
- [#2582] Change: Load the seminar object (and its data) lazily in the registration class
- [#2534] Feature: Add a button for canceling an event to the BE events list