@@ -1,4 +1,5 @@
 0.8.0 (currently working on)
+- [#737] Fix: When FE-editing an existing event, don't change the crdate
 - [#2705] Fix: Crash when saving an event in the FE
 - [#2583] Fix: seminar::createImageForSingleView needs to initialize $imageFile before use
 - [#2496] Change: Add a function for sending an e-mail to an FE user and use it from registration::notifyAttendee
